--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==3.2.8
+django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 drf-nested-routers==0.93.3
 psycopg2==2.9.1
 python-dotenv==0.19.0
+PyJWT==2.1.0
